--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "nodemon server/server.js",
     "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
   },
@@ -15,10 +15,13 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.15.2",
+    "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.24",
-    "mongoose": "^4.8.7"
+    "mongoose": "^4.8.7",
+    "validator": "^7.0.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
